webview-ui/src/index.css
@import url(./themes/index.css);

@tailwind base;
@tailwind components;
@tailwind utilities;

#root {
  height: 100%;
  margin: 0 auto;
  font-family: var(--vscode-font-family);
  color: var(--vscode-sideBar-foreground);
  background-color: var(--vscode-sideBar-background);
  /* Override VS Code Webview Toolkit elements */
  --border-width: none;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: var(--vscode-sideBar-background);
}

a {
  font-weight: 500;
  color: var(--vscode-textLink-foreground);
  text-decoration: inherit;
}

a:hover {
  color: var(--vscode-textLink-activeForeground);
}

.w-100 {
  width: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.logo {
  background-image: url('./assets/logo.png');
}

